--- a/web/src/main/resources/application.properties
+++ b/web/src/main/resources/application.properties
@@ -16,4 +16,7 @@ spring.jpa.properties.hibernate.current_session_context_class=org.springframewor
 #log config
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
-#management.security.enabled=false
+##security
+security.ignored=/**
+management.security.enabled=false
+#security.basic.enabled=false
