--- a/web/src/main/resources/application.properties
+++ b/web/src/main/resources/application.properties
@@ -17,6 +17,6 @@ spring.jpa.properties.hibernate.current_session_context_class=org.springframewor
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 ##security
-security.ignored=/**
+#security.ignored=/**
 management.security.enabled=false
 #security.basic.enabled=false
